samples/_failures_safe/1761794483_cd205e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7dd9d184.c:90:1: error: expected expression at end of input
   90 | const size_t num_transitions = sizeof
      | ^~~~~
